fix(s3_web/p01): prevent overflow

--- a/s3_web/p01/src/components/post.module.css
+++ b/s3_web/p01/src/components/post.module.css
@@ -6,6 +6,7 @@ header > * {
 main > * {
   display: inline-block;
   padding: 0 0.2rem;
+  word-break: break-all;
 }
 
 p {
